Feat: Added the brachiosaurus

--- a/src/main/resources/assets/dinomod/lang/en_us.json
+++ b/src/main/resources/assets/dinomod/lang/en_us.json
@@ -9,6 +9,7 @@
   "item.dinomod.dodo_meat": "Raw Dodo",
   "item.dinomod.cooked_dodo_meat": "Cooked Dodo",
   "item.dinomod.trike_spawn_egg": "Triceratops Spawn Egg",
+  "item.dinomod.brachiosaurus_spawn_egg": "Brachiosaurus Spawn Egg",
 
   "block.dinomod.fossil_ore": "Petrified Fossil",
   "block.dinomod.carbon_fossil": "Carbon Fossil",
